@@ -1,4 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_css">
- <stylesheet id="++resource++jquery.similaritydialog.css" />
+ <stylesheet id="++resource++jquery.similaritydialog.css"
+  expression="python: (not here.restrictedTraverse('@@plone_portal_state').anonymous()) and 'edit' in request.URL0.split('/')[-1] and 'portal_factory' in request.URL0 and here.restrictedTraverse('@@similarity_settings').enabled()"
+  insert-after="eea-responsive.css" />
 </object>
