@@ -5,9 +5,13 @@ import json
 import logging
 from Products.Five import BrowserView
 from zope.component.hooks import getSite
+from zope.component import getUtility
 from gensim import corpora, models, similarities
-from collections import defaultdict
+from gensim.utils import simple_preprocess
+from gensim.parsing.preprocessing import STOPWORDS
+from collections import defaultdict, OrderedDict
 from stemming.porter2 import stem
+from plone.app.async.interfaces import IAsyncService
 from eea.similarity.interfaces import IEEASimilaritySettings
 try:
     from eea.versions.interfaces import IGetVersions
@@ -16,10 +20,6 @@ except ImportError:
 
 MAX_DIFFERENCE = 0.1
 SUGGESTIONS_PATH = os.environ.get('EEASUGGESTIONS_PATH', '/tmp')
-EQUIV_TYPES = {
-    'EEAFigure': ['EEAFigure', 'DavizVisualization'],
-    'DavizVisualization': ['EEAFigure', 'DavizVisualization'],
-}
 
 logger = logging.getLogger('eea.similarity')
 
@@ -36,17 +36,12 @@ def get_gensim_data():
 
 class Suggestions(BrowserView):
 
-    def __init__(self, context, request):
-        self.context = context
-        self.request = request
-
-
     def reference_threshold(self, length):
-        similarity_settings = IEEASimilaritySettings(self.context).settings
+        settings = IEEASimilaritySettings(self.context).settings
         if length > 4:
-            return float(similarity_settings.threshold2)
+            return float(settings.threshold2)
         elif length > 2:
-            return float(similarity_settings.threshold1)
+            return float(settings.threshold1)
 
 
     def __call__(self):
@@ -55,10 +50,16 @@ class Suggestions(BrowserView):
         if self.context.getLanguage() != 'en':
             #suggestions only work for English
             return
+        settings = IEEASimilaritySettings(self.context).settings
+        max_difference = settings.max_difference or MAX_DIFFERENCE
+        equiv_types = [equiv_set.replace(' ', '').split(',')
+                       for equiv_set in settings.equivalent_content_types]
+        max_suggestions = settings.number_of_suggestions or 5
         catalog = getSite().portal_catalog
-        candidates = {}
+        candidates = OrderedDict()
         title = self.request.get('title')
-        words = title.lower().split()
+        words = [word for word in simple_preprocess(title, deacc=True)
+                 if not settings.remove_stopwords or word not in STOPWORDS]
         portal_type = self.request.get('portal_type')
         if len(words) < 3:
             brains = catalog({'Title': words})[:3]
@@ -74,10 +75,10 @@ class Suggestions(BrowserView):
             previous_note = 0
             for sim in sims:
                 if sim[1] < self.reference_threshold(
-                        len(title.lower().split())) or (
-                        previous_note - sim[1] > MAX_DIFFERENCE):
-                    # if the difference in similarity is big, next candidates are
-                    # no longer interesting
+                        len(words)) or (
+                        previous_note - sim[1] > max_difference):
+                    # if the difference in similarity is big,
+                    # next candidates are no longer interesting
                     break
                 previous_note = sim[1]
 
@@ -92,8 +93,11 @@ class Suggestions(BrowserView):
                 except IndexError:
                     logger.error('Object with UID %s not found in catalog' % uid)
                 else:
-                    if brain.portal_type in EQUIV_TYPES.get(
-                            portal_type, [portal_type]):
+                    equivs = [brain.portal_type]
+                    for equiv_set in equiv_types:
+                        if brain.portal_type in equiv_set:
+                            equivs.extend(equiv_set)
+                    if brain.portal_type in equivs:
                         try:
                             versions = IGetVersions(brain.getObject())
                             latest = versions.latest_version()
@@ -105,36 +109,49 @@ class Suggestions(BrowserView):
                             if url not in candidates:
                                 candidates[url] = [
                                     brain.Title, str(sim[1])]
-                if len(candidates) == 5:
+                if len(candidates) == max_suggestions:
                     break
         return json.dumps(candidates)
 
 
+def task_create_idf_index(context):
+    site = getSite()
+    catalog = site.portal_catalog
+    settings = IEEASimilaritySettings(context).settings
+    texts = [[stem(word) for word in simple_preprocess(brain.Title,
+              deacc=True) if not settings.remove_stopwords or
+              word not in STOPWORDS] +
+             [brain.UID.encode('utf8')]
+              for brain in catalog(Language='en') if brain.Title]
+    dictionary = corpora.Dictionary(texts)
+    dictionary.save(SUGGESTIONS_PATH +  '/dictionary.dict')
+    corpus = [dictionary.doc2bow(text) for text in texts]
+    corpora.MmCorpus.serialize(SUGGESTIONS_PATH +  '/corpus.mm', corpus)
+    lsi = models.LsiModel(corpus, id2word=dictionary, num_topics=200)
+    lsi.save(SUGGESTIONS_PATH +  '/lsi.lsi')
+    index = similarities.MatrixSimilarity(lsi[corpus], num_features=200)
+    index.save(SUGGESTIONS_PATH +  '/index.index')
+
+
 class TFIDFIndex(BrowserView):
-    """ creates dictionary, corpus, lsi and index for the TF-IDF
-    """
-    def __init__(self, context, request):
-        self.context = context
-        self.request = request
+    """ creates dictionary, corpus, lsi and index for the TF-IDF"""
 
     def __call__(self):
-        site = getSite()
-        catalog = site.portal_catalog
-        texts = [[stem(word) for word in brain.Title.lower().split()] +
-                  [brain.UID.encode('utf8')]
-                  for brain in catalog(Language='en') if brain.Title]
-        dictionary = corpora.Dictionary(texts)
-        dictionary.save(SUGGESTIONS_PATH +  '/dictionary.dict')
-        corpus = [dictionary.doc2bow(text) for text in texts]
-        corpora.MmCorpus.serialize(SUGGESTIONS_PATH +  '/corpus.mm', corpus)
-        lsi = models.LsiModel(corpus, id2word=dictionary, num_topics=200)
-        lsi.save(SUGGESTIONS_PATH +  '/lsi.lsi')
-        index = similarities.MatrixSimilarity(lsi[corpus], num_features=200)
-        index.save(SUGGESTIONS_PATH +  '/index.index')
-
+        async = getUtility(IAsyncService)
+        job = async.queueJob(task_create_idf_index, self.context)
+        return "OK"
 
 class SimilaritySettings(BrowserView):
     """ return parts of the registry settings
     """
     def enabled(self):
         return IEEASimilaritySettings(self.context).enabled
+
+
+class SuggestionsText(BrowserView):
+    """ returns the title and the description of the suggestions dialog """
+
+    def __call__(self):
+        settings = IEEASimilaritySettings(self.context)
+        text = [settings.dialog_title, settings.dialog_text]
+        return json.dumps(text)
